--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@brunoimbrizi/controlkit": "^0.1.99",
     "async-preloader": "^4.8.1",
     "domready": "^1.0.8",
+    "glsl-blend": "^1.0.3",
     "glsl-inverse": "^1.0.0",
     "glsl-transpose": "^1.0.0",
     "postprocessing": "^6.8.8",
